--- a/app_pagos/src/app/views/administrador/administrador.component.html
+++ b/app_pagos/src/app/views/administrador/administrador.component.html
@@ -46,12 +46,6 @@
   <div *ngIf="!enEdicion">
     <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4 mt-10">Crear Nuevo Administrador</h2>
     <form [formGroup]="adminForm" (ngSubmit)="crearAdministrador()">
-      <!-- Edicion del campo de nombre de usuario -->
-      <div class="flex flex-col mb-4">
-        <label for="nombre_usuario" class="text-gray-700 dark:text-gray-300 mb-1">Nombre de Usuario</label>
-        <input formControlName="nombre_usuario" id="nombre_usuario" type="text" placeholder="Nombre de Usuario"
-          class="border border-gray-300 dark:border-gray-600 rounded-md py-2 px-3 bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
-      </div>
       <div class="flex flex-col mb-4">
         <label for="nombres" class="text-gray-700 dark:text-gray-300 mb-1">Nombres</label>
         <input formControlName="nombres" id="nombres" type="text" placeholder="Nombres"
@@ -78,7 +72,8 @@
 
       <div class="flex flex-col mb-4">
         <label for="confirm_password" class="text-gray-700 dark:text-gray-300 mb-1">Confirmar Contraseña</label>
-        <input formControlName="confirm_password" id="confirm_password" type="password" placeholder="Confirmar Contraseña"
+        <input formControlName="confirm_password" id="confirm_password" type="password"
+          placeholder="Confirmar Contraseña"
           class="border border-gray-300 dark:border-gray-600 rounded-md py-2 px-3 bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
       </div>
 
