Refactor user service to generate a unique username using a timestamp

--- a/app_pagos/src/app/components/signup/signup.component.html
+++ b/app_pagos/src/app/components/signup/signup.component.html
@@ -12,8 +12,10 @@
         <input formControlName="nombres" id="nombres" type="text" required
           class="border border-gray-300 dark:border-gray-600 rounded-md py-2 px-3 text-gray-900 dark:text-white bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
           placeholder="Ingrese sus nombres" />
-        <div *ngIf="signupForm.get('nombres')?.hasError('required')" class="text-red-500 text-sm mt-1">
-          Este campo es requerido.
+        <div
+          *ngIf="signupForm.get('nombres')?.errors && (signupForm.get('nombres')?.touched || signupForm.get('nombres')?.dirty)"
+          class="text-red-500 text-sm mt-1">
+          <div *ngIf="signupForm.get('nombres')?.errors?.['required']">Este campo es obligatorio.</div>
         </div>
       </div>
       <div class="flex flex-col">
@@ -21,8 +23,10 @@
         <input formControlName="apellidos" id="apellidos" type="text" required
           class="border border-gray-300 dark:border-gray-600 rounded-md py-2 px-3 text-gray-900 dark:text-white bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
           placeholder="Ingrese sus apellidos" />
-        <div *ngIf="signupForm.get('apellidos')?.hasError('required')" class="text-red-500 text-sm mt-1">
-          Este campo es requerido.
+        <div
+          *ngIf="signupForm.get('apellidos')?.errors && (signupForm.get('apellidos')?.touched || signupForm.get('apellidos')?.dirty)"
+          class="text-red-500 text-sm mt-1">
+          <div *ngIf="signupForm.get('apellidos')?.errors?.['required']">Este campo es obligatorio.</div>
         </div>
       </div>
       <div class="flex flex-col">
@@ -30,42 +34,51 @@
         <input formControlName="email" id="email" type="email" required
           class="border border-gray-300 dark:border-gray-600 rounded-md py-2 px-3 text-gray-900 dark:text-white bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
           placeholder="Ingrese su correo" />
-        <div *ngIf="signupForm.get('email')?.hasError('required')" class="text-red-500 text-sm mt-1">
-          Este campo es requerido.
+        <div
+          *ngIf="signupForm.get('email')?.errors && (signupForm.get('email')?.touched || signupForm.get('email')?.dirty)"
+          class="text-red-500 text-sm mt-1">
+          <div *ngIf="signupForm.get('email')?.errors?.['required']">El correo electrónico es obligatorio.</div>
+          <div *ngIf="signupForm.get('email')?.errors?.['email']">El formato del correo electrónico es inválido.</div>
         </div>
       </div>
+    </div>
+    <div class="mt-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4">
       <div class="flex flex-col">
         <label for="password" class="text-gray-700 dark:text-gray-300 mb-1">Contraseña</label>
         <input formControlName="password" id="password" type="password" required
           class="border border-gray-300 dark:border-gray-600 rounded-md py-2 px-3 text-gray-900 dark:text-white bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
           placeholder="Ingrese su contraseña" />
-        <div *ngIf="signupForm.get('password')?.hasError('required')" class="text-red-500 text-sm mt-1">
-          Este campo es requerido.
+        <div
+          *ngIf="signupForm.get('password')?.errors && (signupForm.get('password')?.touched || signupForm.get('password')?.dirty)"
+          class="text-red-500 text-sm mt-1">
+          <div *ngIf="signupForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</div>
+          <div *ngIf="signupForm.get('password')?.errors?.['minlength']">La contraseña debe tener al menos 6 caracteres.
+          </div>
         </div>
       </div>
       <div class="flex flex-col">
-        <label for="confirmPassword" class="text-gray-700 dark:text-gray-300 mb-1">Confirmar Contraseña</label>
-        <input formControlName="confirmPassword" id="confirmPassword" type="password" required
+        <label for="confirm_password" class="text-gray-700 dark:text-gray-300 mb-1">Confirmar Contraseña</label>
+        <input formControlName="confirm_password" id="confirm_password" type="password" required
           class="border border-gray-300 dark:border-gray-600 rounded-md py-2 px-3 text-gray-900 dark:text-white bg-white dark:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
           placeholder="Confirme su contraseña" />
-        <div *ngIf="signupForm.get('confirmPassword')?.hasError('required')" class="text-red-500 text-sm mt-1">
-          Este campo es requerido.
+        <div
+          *ngIf="signupForm.get('confirm_password')?.errors && (signupForm.get('confirm_password')?.touched || signupForm.get('confirm_password')?.dirty)"
+          class="text-red-500 text-sm mt-1">
+          <div *ngIf="signupForm.get('confirm_password')?.errors?.['required']">Es necesario confirmar la contraseña.
+          </div>
         </div>
+      </div>
+      <div
+        *ngIf="signupForm.errors?.['mismatch'] && (signupForm.get('confirm_password')?.touched || signupForm.get('password')?.touched)"
+        class="text-red-500 text-sm mb-4">
+        Las contraseñas no coinciden.
       </div>
     </div>
     <div class="mt-6">
       <button type="submit"
         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-full transition-colors duration-200">
-        {{registroEmpresa ?"Registra tu Empresa":"Registrarse" }}
+        Registrarse
       </button>
-    </div>
-    <!-- Opción de Registro -->
-    <div class="text-center mt-4" *ngIf="!registroEmpresa">
-      <span class="text-gray-600 dark:text-gray-400 text-sm">
-        ¿Quieres registrar tu empresa?
-        <a routerLink="/signup/empresa"
-          class="text-blue-500 hover:text-blue-700 font-medium transition-colors duration-200">Regístrate</a>
-      </span>
     </div>
   </form>
 </div>
